# CircuitPython_ColorFader

./: README.rst  cedargrove_colorfader.py  pyproject.toml
examples/: cedargrove_colorfader_example.py  colorfader_example.py
